# platform.external.icing

./: .gitignore  Android.bp  CMakeLists.txt  METADATA  OWNERS  TEST_MAPPING  build.gradle  jarjar-rules.txt  lint-baseline.xml  synced_AOSP_CL_number.txt
icing/: document-builder.h  feature-flags.h  icing-search-engine-initialize-icu-failure-test-jni-layer.cc  icing-search-engine-jni.cc  icing-search-engine-with-icu-file_test.cc  icing-search-engine.cc  icing-search-engine.h  icing-search-engine_backwards_compatibility_test.cc  icing-search-engine_benchmark.cc  icing-search-engine_blob_test.cc  icing-search-engine_delete_test.cc  icing-search-engine_flush_benchmark.cc  icing-search-engine_fuzz_test.cc  icing-search-engine_initialization_test.cc  icing-search-engine_initialize_icu_failure_test.cc  icing-search-engine_initialize_icu_success_test.cc  icing-search-engine_jni.cc  icing-search-engine_optimize_test.cc  icing-search-engine_put_test.cc  icing-search-engine_schema_test.cc  icing-search-engine_search_test.cc  icing-search-engine_suggest_test.cc  icing-search-engine_test.cc  icu-data-file-helper.cc  icu-data-file-helper.h  jni.lds  performance-configuration.cc  performance-configuration.h  result-retriever.cc  result-retriever.h  result-retriever_test.cc  schema-builder.h  snippet-retriever.cc  snippet-retriever.h  snippet-retriever_test.cc
icing/absl_ports/: annotate.cc  annotate.h  arraysize_macros.h  ascii_str_to_lower.cc  ascii_str_to_lower.h  canonical_errors.cc  canonical_errors.h  mutex.h  status_imports.h  status_macros.h  status_test.cc  str_cat.cc  str_join.h  thread_annotations.h
icing/expand/: expander-manager.cc  expander-manager.h  expander-manager_test.cc  expander.h
icing/file/: constants.h  derived-file-util.h  destructible-directory.h  destructible-directory_test.cc  file-backed-bitmap.cc  file-backed-bitmap.h  file-backed-proto-log.h  file-backed-proto-log_benchmark.cc  file-backed-proto-log_test.cc  file-backed-proto.h  file-backed-proto_test.cc  file-backed-vector.h  file-backed-vector_benchmark.cc  file-backed-vector_test.cc  filesystem.cc  filesystem.h  filesystem_test.cc  marker-file.cc  marker-file.h  marker-file_test.cc  memory-mapped-file-backed-proto-log-test.cc  memory-mapped-file-backed-proto-log.h  memory-mapped-file-leak_test.cc  memory-mapped-file.cc  memory-mapped-file.h  memory-mapped-file_test.cc  mock-filesystem.h  persistent-hash-map.cc  persistent-hash-map.h  persistent-hash-map_test.cc  persistent-storage.cc  persistent-storage.h  portable-file-backed-proto-log.h  portable-file-backed-proto-log_benchmark.cc  portable-file-backed-proto-log_test.cc  version-util.cc  version-util.h  version-util_test.cc
icing/index/: data-indexing-handler.h  embedding-indexing-handler.cc  embedding-indexing-handler.h  embedding-indexing-handler_test.cc  index-processor.cc  index-processor.h  index-processor_benchmark.cc  index-processor_test.cc  index.cc  index.h  index_test.cc  integer-section-indexing-handler.cc  integer-section-indexing-handler.h  integer-section-indexing-handler_test.cc  lite-index.cc  lite-index.h  posting-list-free.h  posting-list-free_test.cc  posting-list-used.cc  posting-list-used.h  posting-list-used_test.cc  posting-list-utils.cc  posting-list-utils.h  property-existence-indexing-handler.cc  property-existence-indexing-handler.h  property-existence-indexing-handler_test.cc  section-indexing-handler.h  string-section-indexing-handler.cc  string-section-indexing-handler.h  string-section-indexing-handler_test.cc  term-id-codec.cc  term-id-codec.h  term-indexing-handler.cc  term-indexing-handler.h  term-indexing-handler_test.cc  term-metadata.h
icing/jni/: icing-search-engine-jni.cc  jni-cache.cc  jni-cache.h  reverse-jni-break-iterator.cc  reverse-jni-break-iterator.h  scoped-primitive-array-critical.h  scoped-primitive-array-critical_test.cc  scoped-utf-chars.h  scoped-utf-chars_test.cc
icing/join/: aggregate-scorer.cc  aggregate-scorer.h  aggregation-scorer.cc  aggregation-scorer.h  aggregation-scorer_test.cc  doc-join-info.cc  doc-join-info.h  doc-join-info_test.cc  document-id-to-join-info.h  document-join-id-pair.cc  document-join-id-pair.h  document-join-id-pair_test.cc  join-children-fetcher-impl-deprecated.cc  join-children-fetcher-impl-deprecated.h  join-children-fetcher-impl-deprecated_test.cc  join-children-fetcher-impl-v3.cc  join-children-fetcher-impl-v3.h  join-children-fetcher-impl-v3_test.cc  join-children-fetcher.cc  join-children-fetcher.h  join-children-fetcher_test.cc  join-processor.cc  join-processor.h  join-processor_test.cc  posting-list-join-data-accessor.h  posting-list-join-data-accessor_test.cc  posting-list-join-data-serializer.h  posting-list-join-data-serializer_test.cc  qualified-id-join-index-impl-v1.cc  qualified-id-join-index-impl-v1.h  qualified-id-join-index-impl-v1_test.cc  qualified-id-join-index-impl-v2.cc  qualified-id-join-index-impl-v2.h  qualified-id-join-index-impl-v2_test.cc  qualified-id-join-index-impl-v3.cc  qualified-id-join-index-impl-v3.h  qualified-id-join-index-impl-v3_test.cc  qualified-id-join-index.cc  qualified-id-join-index.h  qualified-id-join-index_test.cc  (+18 more)
icing/monkey_test/: icing-monkey-test-runner.cc  icing-monkey-test-runner.h  icing-search-engine_monkey_test.cc  in-memory-icing-search-engine.cc  in-memory-icing-search-engine.h  monkey-test-common-words.h  monkey-test-generators.cc  monkey-test-generators.h  monkey-test-util.h  monkey-tokenized-document.h
icing/portable/: endian.h  equals-proto.h  gzip_stream.cc  gzip_stream.h  platform.h
icing/proto/: document.proto  document_wrapper.proto  icing-search-engine-options.proto  initialize.proto  optimize.proto  persist.proto  reset.proto  schema.proto  scoring.proto  search.proto  status.proto  term.proto
icing/query/: advanced-query-processor.cc  advanced-query-processor.h  query-features.h  query-processor.cc  query-processor.h  query-processor_benchmark.cc  query-processor_test.cc  query-results.h  (+6 more)
java/: Android.bp  build.gradle
nativeLib/: build.gradle
proto/: Android.bp  visibility.proto
(+559 files in other folders)
